# wellen

./: .gitattributes  .gitignore  CODING_STYLE.md  LICENSE  PROJECTS-INCLUDED.md  README.md  RELEASE_NOTES.md
docs/: CNAME  allclasses-index.html  allclasses.html  allpackages-index.html  constant-values.html  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  stylesheet.css  type-search-index.js
docs/reference/: allpackages-index.html  constant-values.html
docs/wellen/: ADSR.html  Arpeggiator.NoteStruct.html  Arpeggiator.html  AudioBufferManager.html  AudioBufferRenderer.html  AudioDevice.html  AudioDeviceConfiguration.html  AudioDeviceImplDesktop.html  Beat.Listener.html  Beat.html  BeatDSP.html  BeatEvent.html  BeatListener.html  BeatMIDI.html  Crossfader.html  DSP.html  DSPComposition.html  DSPModule.html  DSPNodeInput.html  DSPNodeInputSignal.html  DSPNodeOutput.html  DSPNodeOutputSignal.html  DSPNodeProcess.html  DSPTrack.html  Distortion.TYPE.html  Distortion.html  EffectMono.html  EffectStereo.html  Envelope.html  EnvelopeListener.html  EventReceiverMIDI.html  EventReceiverOSC.html  FFT.html  FMSynthesis.html  Filter.html  FilterBiquad.html  Gain.html  Grid.html  HarmonicTable.html  Instrument.html  (+57 more)
lib/: libjni_wellen_sam.dylib  library.properties  stylesheet.css
lib/SAM/: CMakeLists.txt  NOTES.md  build-jni-lib.sh
lib/SAM/cpp/: wellen_SAM.h  wellen_SAM_impl.cpp  wellen_SAM_impl.h
lib/SAM/java/: wellen_SAM.h
lib/SAM/java/wellen/: SAM.java
lib/SAM/libraries/SAM/include/: reciter.h  render.h  sam.h
lib/SAM/libraries/SAM/src/: debug.cpp  reciter.cpp  render.cpp  sam.cpp
processing-library/ton/: README.md
processing-library/welle/: README.md  library.properties
processing-library/wellen/: README.md  library.properties
reference/: allclasses-frame.html  allclasses-noframe.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-frame.html  overview-summary.html  overview-tree.html  package-list  package-search-index.js  stylesheet.css  type-search-index.js
reference/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-20.html  index-21.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
reference/ton/: Arpeggiator.html  AudioBufferManager.html  AudioBufferRenderer.html  Beat.html  BeatEvent.html  BeatListener.html  DSP.html  DSPNodeOutput.html  DSPNodeProcess.html  LowPassFilter.html  MidiInListener.html  SampleDataSNARE.html  Sampler.html  Scale.html  Ton.html  TonEvent.html  ToneEngineInternal.html  ToneEngineMIDI.html  ToneEngineOSC.html  Trigger.html  Wavetable.html  package-frame.html  package-summary.html  package-tree.html
reference/welle/: ADSR.html  AudioBufferManager.html  AudioBufferRenderer.html  Beat.html  BeatDSP.html  BeatMIDI.html  DSP.html  DSPNodeInput.html  EventReceiverOSC.html  Instrument.html  LowPassFilter.html  MidiIn.html  Note.html  Sampler.html  TonEvent.html  ToneEngine.html  ToneEngineInternal.html  ToneEngineMIDI.html  Wavetable.html  Welle.html  (+2 more)
tools/: convert-to-raw.sh  midiclock.linux  midiclock.macos
(+2564 files in other folders)
